--- a/Frontend console/FrontendConsole.csproj
+++ b/Frontend console/FrontendConsole.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Backend\Backend.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
