--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <None Remove="Data\Languages\en-EN.json" />
+    <None Remove="Data\Languages\es-ES.json" />
     <None Remove="Data\Languages\fr-FR.json" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Data\Languages\en-EN.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\Languages\es-ES.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\Languages\fr-FR.json">
