--- a/Frontend console/FrontendConsole.csproj
+++ b/Frontend console/FrontendConsole.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>Frontend_console</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyVersion>1.1</AssemblyVersion>
+    <FileVersion>1.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
