--- a/FrontendWPF/FrontendWPF.csproj
+++ b/FrontendWPF/FrontendWPF.csproj
@@ -10,4 +10,8 @@
     <FileVersion>1.1</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj" />
+  </ItemGroup>
+
 </Project>
