--- a/Frontend console/FrontendConsole.csproj
+++ b/Frontend console/FrontendConsole.csproj
@@ -18,4 +18,8 @@
     <Folder Include="ViewModel\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
