--- a/FrontendWPF/FrontendWPF.csproj
+++ b/FrontendWPF/FrontendWPF.csproj
@@ -10,4 +10,8 @@
     <FileVersion>1.1</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
