--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -9,19 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\Languages\en.json" />
-    <None Remove="Data\Languages\es.json" />
-    <None Remove="Data\Languages\fr.json" />
+    <None Remove="Data\Languages\en-EN.json" />
+    <None Remove="Data\Languages\es-ES.json" />
+    <None Remove="Data\Languages\fr-FR.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Data\Languages\en.json">
+    <Content Include="Data\Languages\en-EN.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Data\Languages\es.json">
+    <Content Include="Data\Languages\es-ES.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Data\Languages\fr.json">
+    <Content Include="Data\Languages\fr-FR.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
