--- a/FrontendWPF/FrontendWPF.csproj
+++ b/FrontendWPF/FrontendWPF.csproj
@@ -8,7 +8,12 @@
     <UseWPF>true</UseWPF>
     <AssemblyVersion>1.1</AssemblyVersion>
     <FileVersion>1.1</FileVersion>
+    <ApplicationIcon>ES-icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="ES-icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
