#14 Backup implemented in WPF

--- a/FrontendWPF/FrontendWPF.csproj
+++ b/FrontendWPF/FrontendWPF.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="easysavelogo.png" />
   </ItemGroup>
 
